Bug 24828.  Increased file descriptor limit on Solaris to a reasonable number (default is 64 on Solaris7).  r=cls@seawood.org, a=vidur@netscape.com